spacing fixes on category.php

--- a/wp-content/themes/_design/_src/screen.scss
+++ b/wp-content/themes/_design/_src/screen.scss
@@ -801,9 +801,12 @@ ol {
 
 	.entry-title {
 		@extend .h2;
+		margin-bottom: 10px;
 	}
 
 	.entry-summary, .entry-meta {
+		font-size: 12px;
+		margin-bottom: 10px;
 		a {
 			color: $link;
 		}
